--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <body>
   <h1>Cha & Egami</h1>
   <div class="navbar">
+    <a href="/yearlyfamilyphotos" class="menu" id="yearlyfamilyphotos">2022~Current</a>
+    <a href="/2023Korea" class="menu" id="2023Korea">2023 Korea</a>
+    <a href="/2021" class="menu" id="2021">2021</a>
+    <a href="/2019" class="menu" id="2019">2019</a>
+    <a href="/2018Fall" class="menu" id="2018Fall">2018 Fall</a>
+    <a href="/2018Spring" class="menu" id="2018Spring">2018 Spring</a>
+    <a href="/schoolPics" class="menu" id="schoolPics">School Pictures</a>
     <a href="/" class="menu" id="firstbirthday">First Birthday</a>
     <a href="/wedding" class="menu" id="wedding">Wedding</a>
     <a href="/maternity" class="menu" id="maternity">Maternity</a>
@@ -12,16 +19,16 @@
 </body>
 
 <style>
-  #firstbirthday {
+  #2023Korea {
     color: black;
   }
 </style>
 <script>
   const photoContainer = document.getElementById("photos");
 
-  for (var i = 0; i < 105; i++) {
+  for (var i = 0; i < 38; i++) {
     const img = document.createElement("img");
-    img.setAttribute('src', `resizedfirstbirthdayphotos/firstbirthday${i}.jpg`);
+    img.setAttribute('src', `resizedkorea2023/${i}.jpg`);
     setTimeout(function() {
       photoContainer.append(img);
     }, 1000);
